# nGraphLib

./: .gitignore  CMakeLists.txt
.github/scripts/: ci_build.sh  ci_install_deps.sh  ci_test.sh
.github/workflows/: ci.yml
algorithms/: CMakeLists.txt  algorithm_factory.h  algorithm_types.h
algorithms/algorithms/: abstract_algo.h  bfs.h  collapse_id_chains.h  components.h  dfs.h
algorithms/tests/: CMakeLists.txt  test_bfs.cpp  test_dfs.cpp  test_get_components.cpp
graphs/: CMakeLists.txt  directed_graph.h  undirected_graph.h
graphs/private/: base_graph.h
graphs/tests/: CMakeLists.txt  fixtures.h  params.h  test_directed_graph.cpp  test_undirected_graph.cpp
utils/: build.sh  clean.sh  configure.sh  install_deps.sh  run_tests.sh
